# gp-retouch

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy_docs.yml  run_linter.yml  run_tests.yml
api/image/: index.html
api/image_processor/: index.html
contributing/: index.html
docs/: contributing.md  index.md  installation.md  usage.md
docs/api/: image.md  image_processor.md
gp_retouch/: __init__.py  image.py  image_processor.py  loader.py  retoucher.py  retoucher_torch.py  script.py
gp_retouch/artist/: artist.py
gp_retouch/image/: image.py  image_processor.py  loader_saver.py
installation/: index.html
notebooks/: example1.ipynb  example2.ipynb  kernel_art.ipynb
search/: search_index.json
src/: test.py
tests/: test_artist.py  test_image.py  test_image_processor.py  test_retoucher.py
usage/: index.html
