[project]
name = "gp-retouch"
version = "0.1.0"
description = "A python package to retouch and reconstruct images using Gaussian processes."
authors = [
     {name = "Emilio Maddalena", email = "emilio.tanowe.maddalena@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.5.2",
]

[tool.ruff]
line-length = 100
select = ["D", "N", "I", "E501", "E"]
ignore = ["ANN", "D410", "D413", "D100", "D211", "D213", "D203"]
