[project]
name = "gp-retouch"
version = "0.1.0"
description = "A python package to retouch and reconstruct images using Gaussian processes."
authors = [{name = "Emilio Maddalena", email = "emilio.tanowe.maddalena@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gpy>=1.13.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.3",
    "numpy>=1.26.4",
    "pillow>=11.0.0",
    "pytest>=8.3.4",
    "ruff>=0.8.2",
    "scikit-image>=0.24.0",
]

[tool.setuptools]
packages = ["gp_retouch"]

[tool.ruff]
line-length = 100
select = ["D", "N", "I", "E501", "E"]
ignore = ["ANN", "D410", "D413", "D100", "D211", "D213", "D203"]
